# DeepFlyer

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.ml  INTEGRATION_GUIDE.md  Plans.md  README.md  README_IMPLEMENTATION.md  TEAM_OVERVIEW.md  UMA_INTEGRATION_GUIDE.md  docker-compose.yml  educational_tool_overview.md  hub.ipynb  package.xml  pyproject.toml  requirements.txt  yolo_train.py
api/: JAY_INTEGRATION_GUIDE.md  dependencies.py  main.py  ml_interface.py  neon_database_schema.sql  ros_bridge.py  schemas.py  student_api.py  workers.py
docs/: APPROACH_EVOLUTION.md  DEEPFLYER_CONCEPT.md  MISSING_COMPONENTS_GUIDE.md  PX4_RL_IMPLEMENTATION.md  Plans.md  QUICK_START_GUIDE.md  TEAMMATE_INTEGRATION.md  YOLO11_INTEGRATION_GUIDE.md  educational_tool_overview.md  integration_checklist.md  ros_integration_guide.md  system_architecture.md
launch/: deepflyer_ml.launch.py  mvp_system.launch.py
msg/: CourseState.msg  DroneState.msg  RLAction.msg  RewardFeedback.msg  VisionFeatures.msg
nodes/: course_manager_node.py  p3o_agent_node.py  px4_interface_node.py  reward_calculator_node.py  rl_agent_node.py  vision_processor_node.py
rl_agent/: README.md  __init__.py  autotune.py  config.py  config_example.py  depth_processor.py  direct_control_agent.py  direct_control_network.py  direct_control_node.py  distributional.py  error_calculator.py  hierarchical.py  intrinsic.py  logger.py  meta.py  model_based.py  mvp_trajectory.py  pid_controller.py  ppo.py  px4_training_node.py  registry.py  reward_function.py  rewards.py  rl_pid_supervisor.py  ros2_node.py  sac.py  sandbox.py  td3.py  (+6 more)
(+54 files in other folders)
